# proj_ext

./: README.md  requirements.txt
outputs/old_synthetic_/: generation_summary.txt  metrics_summary.txt  synthetic_metrics.csv  synthetic_metrics.txt
outputs/synthetic/: generation_summary.txt  synthetic_metrics.csv  synthetic_metrics.txt
run/: __init__.py  config.py
run/alzheimer-mri-efficientnet-gradcam/alzheimer-mri-efficientnet-gradcam/: LICENSE  README.md  pyproject.toml  requirements.txt
run/alzheimer-mri-efficientnet-gradcam/alzheimer-mri-efficientnet-gradcam/alzheimer_xai/: config.py  data.py  evaluate.py  model.py
run/alzheimer-mri-efficientnet-gradcam/alzheimer-mri-efficientnet-gradcam/notebooks/: Copy_of_GradCAM_others.ipynb
run/alzheimer-mri-efficientnet-gradcam/alzheimer-mri-efficientnet-gradcam/scripts/: download_dataset.py  eigencam.py  evaluate.py  train.py
run/alzheimer-mri-efficientnet-gradcam/alzheimer-mri-efficientnet-gradcam/src/alzheimer_xai/: __init__.py  config.py  data.py  eigencam.py  evaluate.py  model.py
run/alzheimer-mri-efficientnet-gradcam/configs/: config.yaml
run/datasets/: classification_dataset.py  vqa_dataset.py
run/files/: eval_blip_vqa_base.py  generate_synthetic_reports.py  train_blip_vqa_ft.py  train_classification.py  train_effnet_b0_ft.py  train_effnet_b0_head.py  train_vqa.py
run/metrics/: classification_metrics.py  vqa_metrics.py
run/models/: bionnica_lite.py  transfer_classifier.py
run/seg/: config.py
run/seg/segmentation/: sam2_dataset.py  sam2_evaluate.py  (+5 more)
run/utils/: io_utils.py  plotting.py
(+1 files in other folders)
