[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alzheimer-mri-efficientnet-eigencam"
version = "0.1.0"
description = "EfficientNetB0 Alzheimer MRI classification with Eigen-CAM explainability."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
